tests/snapshots/run_wpt_conformance__trtx_pow_float32_broadcasting_two_5D_inputs_with_a_leading_batch_size_of_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "pow.https.any.js",
    "pow float32 broadcasting two 5D inputs with a leading batch size of 1",
    "trtx",
    Failed {
        msg: Some(
            "pow :: pow float32 broadcasting two 5D inputs with a leading batch size of 1: index 1: actual=17.84601 expected=32303294 ulp=174567358 tolerance=32\n  inputs: inputB: [1, 6, -7, 7, -2, 1]; inputA: [17.846010208129883, -0.0631069764494896, -9.868203163146973, 11.17772102355957]\n  expected output: [17.84601, 32303294, 0.0000000017346508, -0.06310698, 0.00000006316321, -250875580, -9113109, 0.010268898, -9.868203, 21800822 ...] (len=12)\n  actual output: [17.84601, 17.84601, 17.84601, 17.84601, 17.84601, 17.84601, -9113109, -9113109, -9113109, -9113109 ...] (len=12)\n  expected output full nd:\n[17.84601, 32303294, 0.0000000017346508, -0.06310698, 0.00000006316321, -250875580, -9113109, 0.010268898, -9.868203, 21800822, ...] (len=12, shape=[1, 2, 2, 1, 3])\n  actual output full nd:\n[17.84601, 17.84601, 17.84601, 17.84601, 17.84601, 17.84601, -9113109, -9113109, -9113109, -9113109, ...] (len=12, shape=[1, 2, 2, 1, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[1, 2, 2, 1, 1];\n    inputB: f32[1, 2, 1, 1, 3];\n  }\n\n  nodes {\n    [output] = pow(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
